--- a/res/layout/activity_me_change_password.xml
+++ b/res/layout/activity_me_change_password.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/baseLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/background"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -29,54 +31,106 @@
             android:text="@string/change_password"
             android:textColor="@color/major_light"
             android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/saveTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-			android:paddingLeft="16dp"
-			android:paddingRight="16dp"
-			android:gravity="center"
-            android:text="@string/save"
-            android:textColor="@color/major_light"
-            android:textSize="16sp" />
+        
     </RelativeLayout>
 
-    <EditText
-        android:id="@+id/oldPasswordEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/titleLayout"
-        android:layout_marginTop="69dp"
-        android:ems="10"
-        android:hint="@string/input_password"
-        android:inputType="textPassword" />
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="18dp"
+        layout="@layout/view_divider" />
 
-    <EditText
-        android:id="@+id/newPasswordEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/oldPasswordEditText"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:hint="@string/input_new_password"
-        android:inputType="textPassword" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/major_light" >
 
-    <EditText
-        android:id="@+id/confirmPasswordEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/newPasswordEditText"
-        android:layout_marginTop="35dp"
-        android:ems="10"
-        android:hint="@string/input_confirm_password"
-        android:inputType="textPassword" />
+        <EditText
+            android:id="@+id/oldPasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@null"
+	        android:hint="@string/input_password"
+	        android:inputType="textPassword"
+            android:textColor="@color/font_major_dark"
+            android:textSize="14sp" />
+    </RelativeLayout>
 
-</RelativeLayout>
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        layout="@layout/view_divider" />
+
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="18dp"
+        layout="@layout/view_divider" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/major_light" >
+
+        <EditText
+            android:id="@+id/newPasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@null"
+	        android:hint="@string/input_new_password"
+	        android:inputType="textPassword"
+            android:textColor="@color/font_major_dark"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        layout="@layout/view_divider" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/major_light" >
+
+        <EditText
+            android:id="@+id/confirmPasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@null"
+	        android:hint="@string/input_confirm_password"
+	        android:inputType="textPassword"
+            android:textColor="@color/font_major_dark"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        layout="@layout/view_divider" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <Button
+            android:id="@+id/submitButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="22dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/button_long_dark_drawable"
+            android:text="@string/submit"
+            android:textColor="@color/button_text_light_color" />
+        
+    </RelativeLayout>
+
+</LinearLayout>
