--- a/res/layout/activity_reim_show.xml
+++ b/res/layout/activity_reim_show.xml
@@ -116,21 +116,24 @@
 	                android:layout_width="match_parent"
 	                android:layout_height="wrap_content"
 	                android:layout_centerVertical="true"
-	                android:layout_toLeftOf="@+id/approvedImageView"
+	                android:layout_toLeftOf="@+id/approvedTextView"
 	                android:layout_marginLeft="80dp"
 	                android:layout_marginRight="10dp"
 	                android:textColor="@color/font_major_dark"
 	                android:textSize="18sp" />
 
-	            <ImageView
-	                android:id="@+id/approvedImageView"
+	            <TextView
+	                android:id="@+id/approvedTextView"
 	                android:layout_width="55dp"
 	                android:layout_height="25dp"
 	                android:layout_centerVertical="true"
 	                android:layout_alignParentRight="true"
 	                android:layout_marginRight="10dp"
-	                android:contentDescription="@string/status"
-	                android:src="@drawable/item_approved_detail" />
+	                android:gravity="center"
+	                android:background="@drawable/item_approved_detail"
+	                android:text="@string/status_prove_ahead_approved"
+	                android:textColor="@color/item_approved"
+	                android:textSize="14sp" />
 	
 	        </RelativeLayout>
             
