--- a/res/layout/activity_me_feedback.xml
+++ b/res/layout/activity_me_feedback.xml
@@ -99,14 +99,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="16dp" >
+        android:layout_height="match_parent" >
 
         <Button
             android:id="@+id/submitButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_marginBottom="22dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:background="@drawable/button_long_dark_drawable"
