--- a/res/layout/activity_report_edit.xml
+++ b/res/layout/activity_report_edit.xml
@@ -99,7 +99,7 @@
 			            android:layout_width="match_parent"
 			            android:layout_height="wrap_content"
 						android:layout_centerVertical="true"
-						android:layout_toLeftOf="@+id/statusImageView"
+						android:layout_toLeftOf="@+id/statusTextView"
 						android:layout_marginRight="14dp"
 			            android:background="@null"
 			            android:inputType="text"
@@ -107,14 +107,14 @@
 			            android:textColor="@color/font_major_dark"
 			            android:textSize="20sp" />
 			
-			        <ImageView
-			            android:id="@+id/statusImageView"
-			            android:layout_width="wrap_content"
-			            android:layout_height="wrap_content"
+			        <TextView
+			            android:id="@+id/statusTextView"
+			            android:layout_width="36dp"
+			            android:layout_height="20dp"
 						android:layout_centerVertical="true"
 						android:layout_alignParentRight="true"
-			            android:contentDescription="@string/status"
-			            android:src="@drawable/report_status_approved" />
+			            android:gravity="center"
+			            android:textColor="@color/major_light" />
 			
 			    </RelativeLayout>
 			
