--- a/res/layout/list_report.xml
+++ b/res/layout/list_report.xml
@@ -12,18 +12,19 @@
         android:layout_weight="1"
 		android:paddingLeft="16dp" >
 
-        <ImageView
-            android:id="@+id/statusImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/statusTextView"
+            android:layout_width="36dp"
+            android:layout_height="20dp"
             android:layout_alignParentTop="true"
             android:layout_marginTop="14dp"
-            android:contentDescription="@string/status" />
+            android:gravity="center"
+            android:textColor="@color/major_light" />
         
          <TextView android:id="@+id/titleTextView"    
             android:layout_width="wrap_content"  
             android:layout_height="wrap_content"
-            android:layout_below="@+id/statusImageView"
+            android:layout_below="@+id/statusTextView"
             android:layout_marginTop="6dp"
             android:ellipsize="end"
             android:singleLine="true"
