--- a/res/layout/list_report_detail.xml
+++ b/res/layout/list_report_detail.xml
@@ -26,14 +26,15 @@
 	            android:layout_height="wrap_content"
 	            android:textColor="@color/font_major_dark"
 	            android:textSize="20sp" />
-	
-	        <ImageView
-	            android:id="@+id/statusImageView"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
+
+	        <TextView
+	            android:id="@+id/statusTextView"
+	            android:layout_width="36dp"
+	            android:layout_height="20dp"
 				android:layout_centerVertical="true"
 				android:layout_alignParentRight="true"
-	            android:contentDescription="@string/status" />
+	            android:gravity="center"
+	            android:textColor="@color/major_light" />
 	
 	    </RelativeLayout>
 	
