--- a/res/layout/fragment_statistics.xml
+++ b/res/layout/fragment_statistics.xml
@@ -207,6 +207,25 @@
                 </RelativeLayout>
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/monthCostTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="16dp"
+                android:text="@string/cost_per_month"
+                android:textColor="@color/hint_grey"
+                android:textSize="14sp" />
+
+            <LinearLayout
+                android:id="@+id/monthLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:orientation="vertical" >
+            </LinearLayout>
            
         </LinearLayout>
         
