--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -11,7 +11,8 @@
     <color name="font_reim_number">#FFFF5353</color>
     <color name="font_budget">#FF3CB798</color>
     <color name="font_list_item_header">#FFA9A9A9</color>
-    <color name="start_font">#FFFE8888</color>
+    <color name="font_start">#FFFE8888</color>
+    <color name="font_month_data">#FF47A3D2</color>
     
     <color name="start_divider">#FFFE8888</color>
     
