--- a/res/layout/activity_report_edit.xml
+++ b/res/layout/activity_report_edit.xml
@@ -43,30 +43,6 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/commentLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="?android:attr/buttonBarStyle">
-
-        <Button
-            android:id="@+id/addCommentButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/add_comment" />
-
-	    <Button
-	        android:id="@+id/checkCommentButton"
-	        android:layout_width="0dp"
-	        android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle"
-	        android:text="@string/check_comment" />
-        
-    </LinearLayout>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -286,8 +262,7 @@
         		android:id="@+id/itemLayout"
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
-			    android:orientation="vertical" >
-			</LinearLayout>
+			    android:orientation="vertical" />
 				    
         </LinearLayout>
         
@@ -298,13 +273,29 @@
 		android:layout_height="0.5dp"
 		layout="@layout/view_divider" />
 
-    <TextView
-        android:id="@+id/submitTextView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:gravity="center"
-        android:background="@drawable/text_drawable"
-        android:text="@string/submit"
-        android:textColor="@color/start_button_text_color" />
+        android:layout_height="wrap_content"
+        style="?android:attr/buttonBarStyle" >
+
+        <Button
+            android:id="@+id/commentButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle"
+            android:text="@string/message"
+            android:textColor="@color/hint_grey" />
+
+        <Button
+            android:id="@+id/submitButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle"
+            android:text="@string/submit" 
+            android:textColor="@color/start_button_text_color"/>
+        
+    </LinearLayout>
 
 </LinearLayout>
