modify style of tag

--- a/res/layout/activity_reim_edit.xml
+++ b/res/layout/activity_reim_edit.xml
@@ -363,10 +363,21 @@
 	            	android:minHeight="56dp"
 	            	android:orientation="vertical"
 	                android:layout_alignParentTop="true"
-	                android:paddingBottom="18dp"
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="16dp" >
+	                android:layout_toLeftOf="@+id/addTagImageView"
+	                android:paddingBottom="16dp"
+	                android:layout_marginLeft="80dp" >
 	            </LinearLayout>
+
+	            <ImageView
+	                android:id="@+id/addTagImageView"
+	                android:layout_width="30dp"
+	                android:layout_height="30dp"
+	                android:layout_alignParentRight="true"
+					android:layout_marginTop="13dp"
+	                android:layout_marginLeft="8dp"
+	                android:layout_marginRight="8dp"
+	                android:contentDescription="@string/add"
+	                android:src="@drawable/add_tag_button" />
 	            
 	        </RelativeLayout>
             
@@ -397,10 +408,21 @@
 	            	android:minHeight="56dp"
 	            	android:orientation="vertical"
 	                android:layout_alignParentTop="true"
+	                android:layout_toLeftOf="@+id/addMemberImageView"
 	                android:paddingBottom="18dp"
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="16dp" >
+	                android:layout_marginLeft="80dp" >
 	            </LinearLayout>
+
+	            <ImageView
+	                android:id="@+id/addMemberImageView"
+	                android:layout_width="30dp"
+	                android:layout_height="30dp"
+	                android:layout_alignParentRight="true"
+					android:layout_marginTop="18dp"
+	                android:layout_marginLeft="8dp"
+	                android:layout_marginRight="8dp"
+	                android:contentDescription="@string/add"
+	                android:src="@drawable/add_tag_button" />
 	
 	        </RelativeLayout>
             
