--- a/res/layout/activity_start_find_by_phone.xml
+++ b/res/layout/activity_start_find_by_phone.xml
@@ -52,10 +52,7 @@
         android:textColor="@color/font_major_light"
         android:textColorHint="@color/hint_white" 
         android:background="@null"
-        android:cursorVisible="true"
-        android:textCursorDrawable="@drawable/cursor" >
-        
-    </EditText>
+        android:textCursorDrawable="@null" />
 
     <include 
         android:id="@+id/divider1"
@@ -80,8 +77,7 @@
         android:textColor="@color/font_major_light"
         android:textColorHint="@color/hint_white" 
         android:background="@null"
-        android:cursorVisible="true"
-        android:textCursorDrawable="@drawable/cursor" />
+        android:textCursorDrawable="@null" />
 
     <Button
         android:id="@+id/acquireCodeButton"
