--- a/res/layout/activity_start_reset_password.xml
+++ b/res/layout/activity_start_reset_password.xml
@@ -50,8 +50,7 @@
         android:textColor="@color/font_major_light"
         android:textColorHint="@color/hint_white" 
         android:background="@null"
-        android:cursorVisible="true"
-        android:textCursorDrawable="@drawable/cursor" />
+        android:textCursorDrawable="@null" />
 
     <include 
         android:id="@+id/divider1"
@@ -76,8 +75,7 @@
         android:textColor="@color/font_major_light"
         android:textColorHint="@color/hint_white" 
         android:background="@null"
-        android:cursorVisible="true"
-        android:textCursorDrawable="@drawable/cursor" />
+        android:textCursorDrawable="@null" />
 
     <include 
         android:id="@+id/divider2"
