--- a/res/layout/activity_start_sign_up_by_email.xml
+++ b/res/layout/activity_start_sign_up_by_email.xml
@@ -43,8 +43,7 @@
         android:textColor="@color/font_major_light"
         android:textColorHint="@color/hint_white" 
         android:background="@null"
-        android:cursorVisible="true"
-        android:textCursorDrawable="@drawable/cursor" />
+        android:textCursorDrawable="@null" />
 
     <include 
         android:id="@+id/divider1"
@@ -70,7 +69,7 @@
         android:textColorHint="@color/hint_white" 
         android:background="@null"
         android:cursorVisible="true"
-        android:textCursorDrawable="@drawable/cursor" />
+        android:textCursorDrawable="@null" />
 
     <include 
         android:id="@+id/divider2"
@@ -95,8 +94,7 @@
         android:textColor="@color/font_major_light"
         android:textColorHint="@color/hint_white" 
         android:background="@null"
-        android:cursorVisible="true"
-        android:textCursorDrawable="@drawable/cursor" />
+        android:textCursorDrawable="@null" />
 
     <include 
         android:id="@+id/divider3"
