--- a/res/layout/activity_report_approve.xml
+++ b/res/layout/activity_report_approve.xml
@@ -65,6 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             style="?android:attr/buttonBarButtonStyle"
+            android:background="@drawable/bar_button_drawable"
             android:text="@string/reject"
             android:textColor="@color/hint_grey" />
 
@@ -74,8 +75,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             style="?android:attr/buttonBarButtonStyle"
+            android:background="@drawable/bar_button_drawable"
             android:text="@string/approve" 
-            android:textColor="@color/major_dark"/>
+            android:textColor="@color/start_button_text_color"/>
     </LinearLayout>
 
 </LinearLayout>
