--- a/res/layout/activity_start_find_by_email.xml
+++ b/res/layout/activity_start_find_by_email.xml
@@ -51,8 +51,7 @@
         android:textColor="@color/font_major_light"
         android:textColorHint="@color/hint_white" 
         android:background="@null"
-        android:cursorVisible="true"
-        android:textCursorDrawable="@drawable/cursor" />
+        android:textCursorDrawable="@null" />
 
     <include 
         android:id="@+id/divider"
