--- a/res/layout/grid_tag.xml
+++ b/res/layout/grid_tag.xml
@@ -1,25 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
-    android:layout_height="wrap_content" >
-
-    <ImageView
-        android:id="@+id/iconImageView"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:contentDescription="@string/tag"
-        android:src="@drawable/default_icon" />
-    
-    <TextView
-        android:id="@+id/nameTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iconImageView"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-	    android:textColor="@color/font_major_dark"
-	    android:textSize="12sp"/>
-
-</RelativeLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="24dp"
+    android:id="@+id/nameTextView"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp"
+    android:gravity="center"
+    android:background="@drawable/tag_shape"
+	android:textColor="@color/major_light"
+	android:textSize="16sp" />
